syntax = "proto3";
option java_package = "orbit.shared.proto";
package orbit.shared;

import "orbit/shared/addressable.proto";

service AddressableManagement {
    rpc RenewLease (RenewAddressableLeaseRequestProto) returns (RenewAddressableLeaseResponseProto);
}

message RenewAddressableLeaseRequestProto {

}

message RenewAddressableLeaseResponseProto {

}